# KALE-farmer

./: .gitignore  Cargo.toml  Makefile  README  README.md  cheatsheet
.cargo/: config.toml
bun_farmer/: .env.example  .env.testnet  .gitignore  app.d.ts  eslint.config.js  farmer.ts  farmerLog.ts  farming.ts  harvest.ts  package.json  state.ts  test.js  utils.ts
bun_scripts/: .env.example  .env.testnet  .gitignore  0.index.ts  README  app.d.ts  bun.lockb  console-utils.ts  farm_scheduled.ts  farmer.ts  farming.ts  harvest.ts  package.json  plant_and_work.ts  state.ts  types.ts  utils.ts
bun_scripts/kale-sc-sdk/: README.md  bun.lockb  package-lock.json  package.json
bun_scripts/kale-sc-sdk/src/: index.ts
bun_tests/: 1.index.ts  2.index.ts  3.index.ts  4.index.ts
ext/kale-sc-sdk/: package.json
node_scripts/: harvest.ts  package-lock.json  package.json  plant_and_work.ts  utils.ts
src/: main.rs
