[package]
name = "kale-farmer"
version = "0.0.1"
edition = "2021"

[dependencies]
num_cpus = "1.16.0"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
clap = { version = "4.5.20", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false