[package]
name = "kale-farmer"
version = "0.0.1"
edition = "2021"

[dependencies]
hex = "0.4.3"
clap = { version = "4.5.21", features = ["derive"] }
rayon = { version = "1.10.0" }
sha3 = "0.10.8"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false